@@ -6,7 +6,9 @@ AUX lh-sources-3.7-armv6.patch 2518 SHA256 75dbd5b6f9178baf47e2d3a2e8211bccfda83
 AUX lh-sources-3.8-armv6.patch 2518 SHA256 75dbd5b6f9178baf47e2d3a2e8211bccfda83feb8217606612cc5a2c85bc065b SHA512 e3183c94bfcadefb447aaeb07a7c9709e1141b1acba301e34159bbef43817e0cf298209a6a5a787a01b7581eb937933d5ee70eb55dbf9267f25583adaad8b448 WHIRLPOOL 04998e4b27542478754ffb835c37b8cab6478a7b05d4f7f303af291ea4fa774bea7f29923e06416eb23b809c37421d1d923a09238265e38c3bf17f731ec9aa35
 AUX lh-sources-3.9-armv6.patch 2518 SHA256 75dbd5b6f9178baf47e2d3a2e8211bccfda83feb8217606612cc5a2c85bc065b SHA512 e3183c94bfcadefb447aaeb07a7c9709e1141b1acba301e34159bbef43817e0cf298209a6a5a787a01b7581eb937933d5ee70eb55dbf9267f25583adaad8b448 WHIRLPOOL 04998e4b27542478754ffb835c37b8cab6478a7b05d4f7f303af291ea4fa774bea7f29923e06416eb23b809c37421d1d923a09238265e38c3bf17f731ec9aa35
 DIST 0001-block-cgroups-kconfig-build-bits-for-BFQ-v6-3.8.patch1 2942 SHA256 aadabe5380d48bf742794dda903dfcf70f232f4cdadf719c78d34655e11835a2 SHA512 e7bd382027f5930642d07ce47fc2a373b601d46808da1d498bd22df7dcfdf9db08a72cbcdc9f8573a08949d0a9e8d3fb969c8894abd362bd6f636725b50280ca WHIRLPOOL da1b46baf393869e4e1fdaa458394edfc7dca8db1522adf60751b842a5668a40c4750fba1516f892be85223f233f95f6b8c531ba0a96e35d8560085c43f314f3
+DIST 0001-block-cgroups-kconfig-build-bits-for-BFQ-v6r1-3.9.patch1 2982 SHA256 ec99a25471dddd6c860762ab3895f94c07181e25f5d4785c66422fff8328cf40 SHA512 62f1830edb1b5b54c27289e81d309a516ac5bfd5ee7b6b75f77ea8b083b8776d928cf068fa87cd776fad550cff836e1260d2618bd678a37a88972a5d2c0274a2 WHIRLPOOL d303f8e51b456c6c657953f52d5107d6e1a09541210d1ad742aaf9d60494c6587329aecf7828b4417c2f3cf6bd62d51d843af959aa123f4a8a4886112a743ca1
 DIST 0002-block-introduce-the-BFQ-v6-I-O-sched-for-3.8.patch1 177121 SHA256 162561c41e9c34afa27de02e748e99384efd8aefaa9d12e32f24d84905c161c5 SHA512 969243390aac491ff04ed684d492e5d3f1215fa9fd63d99a4a5639a63d868934c16cd091713aed1581fc90ed8863f348d71597af7396247c81ed5e4ff28c245a WHIRLPOOL 1777a58fcab8efc2100064199f5f7e0c81ce05e40dcb65ccc45454a097c74f646e2f355ac3262f26541ec020b8a6df2d430927b0424a094f36281f784ce734e0
+DIST 0002-block-introduce-the-BFQ-v6r1-I-O-sched-for-3.9.patch1 169564 SHA256 53a4db3514254fb4ef7c6232e1b6aa2c82818df89660fe16f772b472bff332f1 SHA512 b566f1d5f6b0da64a0a0a02b2fa58d643216636b5046eaac535af5c66213ff5ec895b7c19e1f7e98406d46dfcc2142d43fb695b116248fb0ea938e923732ccc8 WHIRLPOOL f12a09fcb2ea55d6a13c0a4d8de7423024c46b9f79e46dbfddc2a30a73bf00e74b7c91de5c7dd7aaa72a413cd986588bd5ccf96b27f7966107ba959c265119e5
 DIST README-3.8.10.BFQ 9035 SHA256 e2137a2e75e08312512be449d91c0892a9b44847fab4cafbe1ae46d06e582cb9 SHA512 37ca3cb680e3cc1f3504f0e32407b68dbca495344d7f87745f631a68298d4bbb60f0169d0d74fee9b617e754a5d456e71d5be9e7351a40f38f0cbb877f1ee95e WHIRLPOOL 92521161796f2256de0024945c78463af528c5f351271bc728ba5fb3845d728609b17b87decc94331def1fc57d9c5b81879498e1a36c31cc66d33cd0276cb75f
 DIST README-3.8.4.BFQ 9035 SHA256 e2137a2e75e08312512be449d91c0892a9b44847fab4cafbe1ae46d06e582cb9 SHA512 37ca3cb680e3cc1f3504f0e32407b68dbca495344d7f87745f631a68298d4bbb60f0169d0d74fee9b617e754a5d456e71d5be9e7351a40f38f0cbb877f1ee95e WHIRLPOOL 92521161796f2256de0024945c78463af528c5f351271bc728ba5fb3845d728609b17b87decc94331def1fc57d9c5b81879498e1a36c31cc66d33cd0276cb75f
 DIST README-3.8.5.BFQ 9035 SHA256 e2137a2e75e08312512be449d91c0892a9b44847fab4cafbe1ae46d06e582cb9 SHA512 37ca3cb680e3cc1f3504f0e32407b68dbca495344d7f87745f631a68298d4bbb60f0169d0d74fee9b617e754a5d456e71d5be9e7351a40f38f0cbb877f1ee95e WHIRLPOOL 92521161796f2256de0024945c78463af528c5f351271bc728ba5fb3845d728609b17b87decc94331def1fc57d9c5b81879498e1a36c31cc66d33cd0276cb75f
@@ -15,6 +17,7 @@ DIST README-3.8.7.BFQ 9035 SHA256 e2137a2e75e08312512be449d91c0892a9b44847fab4ca
 DIST README-3.8.8.BFQ 9035 SHA256 e2137a2e75e08312512be449d91c0892a9b44847fab4cafbe1ae46d06e582cb9 SHA512 37ca3cb680e3cc1f3504f0e32407b68dbca495344d7f87745f631a68298d4bbb60f0169d0d74fee9b617e754a5d456e71d5be9e7351a40f38f0cbb877f1ee95e WHIRLPOOL 92521161796f2256de0024945c78463af528c5f351271bc728ba5fb3845d728609b17b87decc94331def1fc57d9c5b81879498e1a36c31cc66d33cd0276cb75f
 DIST README-3.9.0.BFQ 9035 SHA256 e2137a2e75e08312512be449d91c0892a9b44847fab4cafbe1ae46d06e582cb9 SHA512 37ca3cb680e3cc1f3504f0e32407b68dbca495344d7f87745f631a68298d4bbb60f0169d0d74fee9b617e754a5d456e71d5be9e7351a40f38f0cbb877f1ee95e WHIRLPOOL 92521161796f2256de0024945c78463af528c5f351271bc728ba5fb3845d728609b17b87decc94331def1fc57d9c5b81879498e1a36c31cc66d33cd0276cb75f
 DIST README-3.9.1.BFQ 9035 SHA256 e2137a2e75e08312512be449d91c0892a9b44847fab4cafbe1ae46d06e582cb9 SHA512 37ca3cb680e3cc1f3504f0e32407b68dbca495344d7f87745f631a68298d4bbb60f0169d0d74fee9b617e754a5d456e71d5be9e7351a40f38f0cbb877f1ee95e WHIRLPOOL 92521161796f2256de0024945c78463af528c5f351271bc728ba5fb3845d728609b17b87decc94331def1fc57d9c5b81879498e1a36c31cc66d33cd0276cb75f
+DIST README-3.9.2.BFQ 9583 SHA256 88e76c5a8259b63c4534b9e154309cff2318f80506cbf469c7c8dff97474d4d5 SHA512 29e4f505eff76e2318fbecf0a7dc3f539103e2c1220e1445be1b7aa3872ea9fe3fbdb95a5cffb728ddc45bea5239a88c81d4d116b122dc795b59443c83549ca0 WHIRLPOOL 178000ac40952b903839a23d92e443be7c11ae262d674ea6f827d6eb49e28868f63bbf1eae1eb42e5eaec869504f5fc6d9c23937ac9b33e868059267b328edc5
 DIST aufs-sources-3.8_p20130318.tar.xz 143300 SHA256 1573e49b0055ceb78d862ee656b25f10469c2219897a2de6689850289e723e80 SHA512 a63f43dc49ea9ae2092171590041bd052ace8755b7b8fa40c825a9478a5b9ad01158205c2eacb81bb2281a8973ff5d44adfd2874bf18b38d19f13120d8a266ad WHIRLPOOL bb540029d2541f9c0215350073ec7e307297ce9a90493e6bbeb106e7eb61e05df35334bd640eb5d34c935daa277ac84145a537e76d1aa3fb8eba2b916d5a461e
 DIST aufs-sources-3.8_p20130325.tar.xz 143352 SHA256 b278d941bcf3c2555ff15158982add3e8dd2216e575cae11bcb56b6e409c2aec SHA512 326cad5e90c5e32e603519c8a555fd08751cdcf67625ed419c1059e1cd967ae41461954b6433c05d5c0c0c83e206093b7f41fee05483bc013dd3158d418bc8cc WHIRLPOOL 471f7fc551e28cd44f9f3a1913426b0f6c7d383b7ec49faba1852fc23cc01aa94a92aacb604bb9d8a28bfc37890370cbbd013ba7a3755000fa3748b4cddb63e2
 DIST aufs-sources-3.8_p20130401.tar.xz 143368 SHA256 3ae9001450a44ae42eebfbbf542ebe977ae2c65f466eb2374bf203241829159d SHA512 46b8271a6042a13c76ee97f692a855c796545c89e2e41abb05288c605f965ee8bb2fbc2496e4e317ebedbf50623cddf9eb1596ffa53c1405db2a939bbbb072cd WHIRLPOOL ab833ea22d7fd00ca43c0332d7c528c1eba0d0fa3efbf3ba0e41fe72233627b3717a2ec1bc9d92629fb8060673afab14e894e6acd1355161d47d9736fd7b9389
@@ -43,6 +46,8 @@ DIST genpatches-3.9-3.base.tar.xz 52860 SHA256 4e62a7aeaffdead3b1a8dde17d5089386
 DIST genpatches-3.9-3.extras.tar.xz 16572 SHA256 6a93041aba5cfa6a45a348b654e129b4ba3659c87437217bbd65eb7a0a841827 SHA512 53c94f50f63d866a66869cfa0b2692c8b71ceb17a703424948d5a92c5390942667651e30fb4a662ba02147b70849cd7fb6bf71f0a4940f19ee1b392e684eb7a4 WHIRLPOOL cc2b332caffd5411c55ed9f7ddcde4c3275e6a68ec765f579e682e1e957b48a1c8601f9d607b4b4b3137af40ae0bcc091390ce733b2fdfaf95db00d77ce57370
 DIST genpatches-3.9-4.base.tar.xz 56576 SHA256 bc2f6d38e77134ef27f21cffa8b67933e513b6f04a79357a0f1c16927ee6eae6 SHA512 3ea4061ed0ebf7370d6c4594fd1ee2cec57f9df514fa7e1e197eb335faece5290b8cda01d1ccd4e19ad8681754de45a5d2eec2bf24adfc56ec9ea3c6dfddb074 WHIRLPOOL d015a2ea8ac6b63d52cd48830882b9af411f6d0437c05b900a88e26d36549a64db03793080aa09551a6246379f834917951d10b136b198832d1276487266a1ca
 DIST genpatches-3.9-4.extras.tar.xz 16572 SHA256 6a93041aba5cfa6a45a348b654e129b4ba3659c87437217bbd65eb7a0a841827 SHA512 53c94f50f63d866a66869cfa0b2692c8b71ceb17a703424948d5a92c5390942667651e30fb4a662ba02147b70849cd7fb6bf71f0a4940f19ee1b392e684eb7a4 WHIRLPOOL cc2b332caffd5411c55ed9f7ddcde4c3275e6a68ec765f579e682e1e957b48a1c8601f9d607b4b4b3137af40ae0bcc091390ce733b2fdfaf95db00d77ce57370
+DIST genpatches-3.9-5.base.tar.xz 78176 SHA256 c61701effc59b03192eb2f2e5608a9e80a320441b96cbf35c52d3d4e65eeaa51 SHA512 c907bd7d36377364153da31df7bd2098eaa4159cf6ebd38711c5ce86aa3c54ad7c81f2830bb4203dc08b05c1d3254c385075ed53ea94f8be71f998b6b54bcca4 WHIRLPOOL 2562dece38a789a67a43d229e49641c569878c950cda87d40e5854d6d50a4845a787eec3ccc61ef5e7fc5df8b36146eb53a75182808a299aeb3797d5baee5499
+DIST genpatches-3.9-5.extras.tar.xz 16572 SHA256 6a93041aba5cfa6a45a348b654e129b4ba3659c87437217bbd65eb7a0a841827 SHA512 53c94f50f63d866a66869cfa0b2692c8b71ceb17a703424948d5a92c5390942667651e30fb4a662ba02147b70849cd7fb6bf71f0a4940f19ee1b392e684eb7a4 WHIRLPOOL cc2b332caffd5411c55ed9f7ddcde4c3275e6a68ec765f579e682e1e957b48a1c8601f9d607b4b4b3137af40ae0bcc091390ce733b2fdfaf95db00d77ce57370
 DIST lh-logo_linux_clut224.ppm 213668 SHA256 cf2ffc266799f3948131c30fe72870ff03afe9010643cc5a1c7b36cd1fe80562 SHA512 95b2a9b21f9125e178e32447f2310983427b37ffd4a861ce145d57e7daa828a38e51641069cdd191f4f2b303a887ae5b93ab0a40290a7976302683d633cdb315 WHIRLPOOL d0e693f86e964661090774350bdc4621f184bce20c7ad1e2fa62a941894feca5b709029a8f1ae398ca3f190f1eacd8c0e072f82e589cbae3dc2da565acca2297
 DIST linux-3.8.tar.xz 70989468 SHA256 e070d1bdfbded5676a4f374721c63565f1c969466c5a3e214004a136b583184b SHA512 10a7983391af907d8aec72bdb096d1cabd4911985715e9ea13d35ff09095c035db15d4ab08b92eda7c10026cc27348cb9728c212335f7fcdcda7c610856ec30f WHIRLPOOL 0c633854ad9c06df1b1d832aea9bbef76144ba88c8fccf6a3f8729101dc36838bcda6ccd444451cab19177608e7f7866f4f79cff1a8ef2bd0c893933d7f1f44c
 DIST linux-3.9.tar.xz 72104164 SHA256 60bc3e64ee5dc778de2cd7cd7640abf518a4c9d4f31b8ed624e16fad53f54541 SHA512 77fa521f42380409f8ab400c26f7b00e225cb075ef40834bb263325cfdcc3e65aef8511ec2fc2b50bbf4f50e226fb5ab07d7a479aaf09162adbbf318325d0790 WHIRLPOOL 668a8de30c7c3ccf6558cf0f29570f15e37ca7d599d1453afc3cab113d1b05fbd5b32646dd9ed798ceb61405a8754345da0740a53f467b825445028cda4bc698
@@ -57,12 +62,13 @@ EBUILD lh-sources-3.9.0-r1.ebuild 3372 SHA256 63bb6e50175f29512693db0150a945f6c4
 EBUILD lh-sources-3.9.0.ebuild 3372 SHA256 a391fcf33b1319efb0c2956f972aa4b30604412724861924e9b237d291adeb86 SHA512 dcf40ace2228c4e30c22ae173b586aa45d22ab536c9f09d6a83f64983427d32cea99e2f3dbff4c5f860ca66eb15ae3bfc36a8fba977fb36d8a2205a7e731bff8 WHIRLPOOL 95c57e0cf1ed9221a3710b5b29bcd8c9169e80fed9acd59c21368c08cc312bb0627eba3e6081d0f54af1bdd896b9b39724752d8205a331ba54d366b687ecac69
 EBUILD lh-sources-3.9.1-r1.ebuild 3372 SHA256 ed1a9fe97bb086451c109449b9181d38df5137b691510742d6f1de2154839b81 SHA512 15f09912d17ceea14ed654d3e390402112505e3ed2f918f29ba067132c2859b90c3d96f8c1fc890ba5ed493802343c007e6a5c250ced01e2bb3e66f1b3abc533 WHIRLPOOL db3f87f84d19dde09e6aed7699e7fe7d6db50675897cb65800398cc219ec1f245d8e557532deb9b08b9746939f2bdf186175980624978125f9deb5d2c2f2f22b
 EBUILD lh-sources-3.9.1.ebuild 3372 SHA256 9c89077c9a56d04764b730c34abce6b1ce0b42d26882fa259cace1de92d67b34 SHA512 127181e45c377bfdc5873b72f38e55915abd54fdf557e14f3031669441dd2934ceddee3936af6a287e3bebdf022299fb4eaa2c9113cd9b4eab8c61c860b8f94d WHIRLPOOL 9152cdc2e85bd84dbefb4dca1817d8c94584b363f17f83ab61741c4dc2f6bf30904a319b449be2e990beaa178b91eb1c3bc133d065c51a91150b68ae1a403f01
-MISC ChangeLog 8021 SHA256 608d8690f7ceb610523b9f54aaba38da84f214bce03b7dfb1b0705e9f1cb2be8 SHA512 824bf3946f7be6664aca3be767927f6bc110418a6f6051a74cf2bdc923ab702dc459bcae0926a1960b7ed715d75ff25625828958220fcb25357419816f8a40de WHIRLPOOL b8f58535e8a01cff823790a2b09b649e843282c0d3b9a34c35007f303f1ad1f55319d0203cad93b47d37be854b5ce3f209a027e4c9ca5e23c09e9a5e4f54700e
+EBUILD lh-sources-3.9.2.ebuild 3437 SHA256 8a31ccee5e0d1d417a6ac92c7eabe6810d482d4e55ddb278970d19d36226f6fb SHA512 22dfce8597f9e1b9e18d81e8e53603e4f214b0f482028b21b42bc755b21fd4e1e30827f8af2543b69c4bab908bb8326fdb9249b21700cc824ba1644ebf04f36d WHIRLPOOL 52fbc597301f29518751bb0adb98427ac7c60265515d3123fe903d70b7c1d9d4fbd1b9b7007cc5e0cd4a023079bb8cc7c25ee37835665fd8f2bd283cc16fc811
+MISC ChangeLog 8175 SHA256 cea54afe8ba06b46cdb3f553a1ed3eb3d206710ef8f63582055940d141991cec SHA512 a12e65d9ec398c589e79d17a6f89e28eb6d31a38ecafceaf8dddf94d3ecc12e761cda4fa817d8886c7090a9bbcb0f7fe33b6dc60eae846fbbcc571fff3f501ad WHIRLPOOL 267159bf0c05c6c77c2297cde788bd17301653fd3788da3f3282db1937165ec50abe7132f3d69cddfaaa07d5896449e46ee67228688d17cb1e451e5efadd78ed
 MISC metadata.xml 621 SHA256 0e6f9ec38a6a9e192a6ab3cf83a409914c821b4dde2c1a15c28d558b6beef8bb SHA512 56744236081b425f4726c26c3b1a8e23297f1b7e4656ff4edbc2e6608a1150fb2e84ed1b58c5ab1318aebdab072392ef9d00160e2c766cc540bb6746bbe24bb3 WHIRLPOOL ed73cba1dee5abce3979c8f41094660b6eb046ef8c4d5820c060b863f54e6fb56a344c49630d8d03d400cba2dc2f4e5a35cd48c4ebdc4e9558511f2e9c9333bb
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iEYEAREKAAYFAlGMoAoACgkQgAnW8HDreRbrwQCdH4u3lnmeNJKP7keFbnh9Sg/N
-kiAAoMGGBJAomkL2hvotXvWORrAxJlwz
-=XjPG
+iEYEAREKAAYFAlGPWvoACgkQgAnW8HDreRYMOgCgrpd+gIjzMZtxtm8l4f8hA429
+A3sAoM7apGHNibdeLAeA5qpiknKbSUgQ
+=NqE1
 -----END PGP SIGNATURE-----
