@@ -1,5 +1,10 @@
 
 
+*lh-sources-3.9.2 (12 May 2013)
+
+  12 May 2013; Justin Lecher <jlec@gentoo.org> +lh-sources-3.9.2.ebuild:
+  Bump to linux-3.9.2 and official bfq patches
+
   10 May 2013; Justin Lecher <jlec@gentoo.org> lh-sources-3.9.1.ebuild,
   +lh-sources-3.9.1-r1.ebuild:
   Fix to new genpatch releases
